# Safecoin-helloWorld

example-helloworld-master/: package.json
example-helloworld-master/src/client/: hello_world.ts  main.ts  utils.ts
example-helloworld-master/src/program-rust/: Cargo.toml
example-helloworld-master/src/program-rust/src/: lib.rs
example-helloworld-master/src/program-rust/tests/: lib.rs
